<resources>
    <string name="app_name">CalcMarket</string>
    <string name="amount">Cantidad</string>
    <string name="code">Codigo</string>
    <string name="valor">Valor</string>
    <string name="page">Pagina</string>
    <string name="total">Total</string>
    <string name="pagar">Pagar</string>
    <string name="name_product">Nombre del producto</string>
    <string name="save">Agregar</string>
    <string name="eliminar">Eliminar</string>
    <string name="add_order">Añadir</string>
    <string name="product_unit_value">Valor unidad: %1$s</string>
    <string name="product_total_value">Valor total: %1$s</string>
    <string name="listado_compras">Tu listado de compras se vera reflejado en la parte de abajo</string>
    <string name="total_value">Valor total: %1$s</string>
    <string name="total_products">Total de productos: %1$s</string>
    <string name="title_detail_buy">This is a detail of bought</string>
    <string name="are_you_sure">Esta seguro de guardar la compra?</string>

    <!--alert messages-->
    <string name="message_buy_in_progress">Hay una compra en curso.\n\n Desea continuar o eliminar?</string>

    <!--title views (buttons textviews)-->
    <string name="title_button_continue">Continuar</string>
    <string name="title_button_agree">Aceptar</string>
    <string name="title_button_cancel">Cancelar</string>
    <string name="title_button_delete">Eliminar</string>
    <string name="las_login">"Última ingreso: %1$s"</string>
    <string name="complete_this_input">Rellenar esta opcion.</string>

</resources>