<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infoProductLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_curve"
            android:paddingVertical="@dimen/padding_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:enabled="false"
                    android:nextFocusDown="@+id/codeOrderEditText"
                    android:textAlignment="center"
                    android:textSize="@dimen/large_letter"
                    tools:text="2" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameProductLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding"
                android:hint="@string/name_product"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:enabled="false"
                    android:nextFocusDown="@+id/codeOrderEditText"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/large_letter"
                    tools:text="Kilo de arroz " />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/valueLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/valor"
                android:layout_marginTop="@dimen/dimen_5"
                android:maxWidth="@dimen/max_edit_text_width"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nameProductLayout"
                app:layout_constraintTop_toBottomOf="@+id/nameProductLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/valueEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:enabled="false"
                    android:inputType="number"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/totalEditText"
                    android:textAlignment="center"
                    tools:text="$555.555" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/totalLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/total"
                android:maxWidth="@dimen/max_edit_text_width"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/nameProductLayout"
                app:layout_constraintTop_toTopOf="@+id/valueLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/totalEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:enabled="false"
                    android:inputType="number"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/countEditText"
                    android:textAlignment="center"
                    tools:text="$555.555" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>